# niff-Stellar-shurance

./: .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION.md  Makefile  audit.toml  docker-compose.prod.yml
.githooks/: pre-commit
.github/workflows/: backend-ci.yml  contracts-ci.yml  node-matrix.yml  prisma-erd.yml  secret-scan.yml  secret-scanning.yml
backend/: package.json
backend/docs/: grafana-dashboard.json  prometheus-rules.yml
backend/prisma/: schema.prisma
backend/scripts/: check-env-parity.ts
backend/src/: app.module.ts
backend/src/admin/: admin-analytics.service.spec.ts  admin-analytics.service.ts  admin.controller.spec.ts  admin.controller.ts  admin.module.ts  admin.service.ts
backend/src/auth/: auth-identity.service.ts  auth.controller.ts  wallet-auth.service.ts
backend/src/claims/: claim-view.mapper.ts  claims.module.ts
backend/src/config/: env.definitions.ts
backend/src/feeds/: feeds.controller.ts  (+3 more)
contracts/: gas-baseline.json
contracts/niffyinsure/: Cargo.toml
contracts/niffyinsure/src/: admin.rs  claim.rs  events.rs  lib.rs  policy.rs  storage.rs  types.rs  validate.rs
contracts/niffyinsure/tests/: gas_benchmarks.rs  policy_expired.rs  security.rs  withdraw_claim.rs
docs/: EVENT_DICTIONARY.md  performance-budget.md
docs/adr/: 0000-template.md  0001-soroban-vs-evm.md  0002-tokenless-dao-governance.md  0003-nestjs-nextjs-stack.md
docs/ops/: error-support-playbook.md  maintenance-runbook.md  multi-region-deployment.md
frontend/: package.json
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
(+90 files in other folders)
