[package]
name = "niffyinsure"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"          # MSRV – soroban-sdk 22+ requires ≥ 1.81
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enables test-only contract entrypoints (test_seed_policy, test_remove_voter).
# Never enable in production WASM builds.
testutils = ["soroban-sdk/testutils"]
experimental = []
# Opt-in: `quarantine/events_integration_stale.rs` targets a pre-`contractevent` topic layout; keep off in CI until migrated.
legacy-event-schema-tests = []
# Reserves governance-token storage keys and optional admin entrypoints. No mint/transfer.
# MVP / default builds must ship with this disabled.
governance-token = []
# Reserves the ClaimStatus::Appealed variant and appeal-window constants for future implementation.
# Default builds compile without any appeal logic executing — the variant is documented only.
# Enable to unlock appeal entrypoints once the full appeal flow is implemented and audited.
appeal-stub = []

[dependencies]
soroban-sdk = { version = "=25.3.1", features = [] }

[dev-dependencies]
soroban-sdk = { version = "=25.3.1", features = ["testutils"] }
premium_calculator = { path = "../../contracts/premium_calculator", features = ["testutils"] }
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
rand = { version = "=0.8.5", features = ["std"] }
serde_json = "1"
